Fix backend bug
